src/parser/generated/SCLParser.py
# Generated from /home/karimodora/Documents/GitHub/step7-scl-runtime-analyzer/grammar/SCL.g4 by ANTLR 4.13.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class SCLParser ( Parser ):

    grammarFileName = "SCL.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "':'", "':='", "';'", "','", "'..'", "'('", 
                     "')'", "'['", "']'", "'.'", "'='", "'<>'", "'<'", "'<='", 
                     "'>'", "'>='", "'+'", "'-'", "'*'", "'/'", "'=>'" ]

    symbolicNames = [ "<INVALID>", "COLON", "ASSIGN", "SEMI", "COMMA", "RANGE", 
                      "LPAREN", "RPAREN", "LBRACKET", "RBRACKET", "DOT", 
                      "EQ", "NE", "LT", "LE", "GT", "GE", "PLUS", "MINUS", 
                      "STAR", "SLASH", "DARROW", "FUNCTION_BLOCK", "END_FUNCTION_BLOCK", 
                      "VAR_INPUT", "VAR_OUTPUT", "VAR_IN_OUT", "VAR", "VAR_TEMP", 
                      "VAR_CONSTANT", "END_VAR", "CONST", "END_CONST", "BEGIN", 
                      "IF", "THEN", "ELSIF", "ELSE", "END_IF", "FOR", "TO", 
                      "BY", "DO", "END_FOR", "WHILE", "END_WHILE", "REPEAT", 
                      "UNTIL", "END_REPEAT", "CASE", "OF", "END_CASE", "RETURN", 
                      "EXIT", "AND", "OR", "XOR", "NOT", "MOD", "AT", "ARRAY", 
                      "STRUCT", "END_STRUCT", "BOOL_LIT", "IDENT", "INT_LIT", 
                      "REAL_LIT", "HEX_LIT", "TIME_LIT", "STRING_LIT", "WS", 
                      "LINE_COMMENT", "BLOCK_COMMENT" ]

    RULE_functionBlock = 0
    RULE_blockHeader = 1
    RULE_constantSection = 2
    RULE_constDecl = 3
    RULE_varSection = 4
    RULE_varSectionHeader = 5
    RULE_varDecl = 6
    RULE_identList = 7
    RULE_typeName = 8
    RULE_indexRange = 9
    RULE_statementList = 10
    RULE_statement = 11
    RULE_assignment = 12
    RULE_ifStatement = 13
    RULE_elsifBranch = 14
    RULE_elseBranch = 15
    RULE_forStatement = 16
    RULE_whileStatement = 17
    RULE_repeatStatement = 18
    RULE_caseStatement = 19
    RULE_caseBranch = 20
    RULE_caseValueList = 21
    RULE_caseValue = 22
    RULE_elseCaseBranch = 23
    RULE_callStatement = 24
    RULE_parameterList = 25
    RULE_parameter = 26
    RULE_returnStatement = 27
    RULE_exitStatement = 28
    RULE_expressionList = 29
    RULE_expression = 30
    RULE_literal = 31

    ruleNames =  [ "functionBlock", "blockHeader", "constantSection", "constDecl", 
                   "varSection", "varSectionHeader", "varDecl", "identList", 
                   "typeName", "indexRange", "statementList", "statement", 
                   "assignment", "ifStatement", "elsifBranch", "elseBranch", 
                   "forStatement", "whileStatement", "repeatStatement", 
                   "caseStatement", "caseBranch", "caseValueList", "caseValue", 
                   "elseCaseBranch", "callStatement", "parameterList", "parameter", 
                   "returnStatement", "exitStatement", "expressionList", 
                   "expression", "literal" ]

    EOF = Token.EOF
    COLON=1
    ASSIGN=2
    SEMI=3
    COMMA=4
    RANGE=5
    LPAREN=6
    RPAREN=7
    LBRACKET=8
    RBRACKET=9
    DOT=10
    EQ=11
    NE=12
    LT=13
    LE=14
    GT=15
    GE=16
    PLUS=17
    MINUS=18
    STAR=19
    SLASH=20
    DARROW=21
    FUNCTION_BLOCK=22
    END_FUNCTION_BLOCK=23
    VAR_INPUT=24
    VAR_OUTPUT=25
    VAR_IN_OUT=26
    VAR=27
    VAR_TEMP=28
    VAR_CONSTANT=29
    END_VAR=30
    CONST=31
    END_CONST=32
    BEGIN=33
    IF=34
    THEN=35
    ELSIF=36
    ELSE=37
    END_IF=38
    FOR=39
    TO=40
    BY=41
    DO=42
    END_FOR=43
    WHILE=44
    END_WHILE=45
    REPEAT=46
    UNTIL=47
    END_REPEAT=48
    CASE=49
    OF=50
    END_CASE=51
    RETURN=52
    EXIT=53
    AND=54
    OR=55
    XOR=56
    NOT=57
    MOD=58
    AT=59
    ARRAY=60
    STRUCT=61
    END_STRUCT=62
    BOOL_LIT=63
    IDENT=64
    INT_LIT=65
    REAL_LIT=66
    HEX_LIT=67
    TIME_LIT=68
    STRING_LIT=69
    WS=70
    LINE_COMMENT=71
    BLOCK_COMMENT=72

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class FunctionBlockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FUNCTION_BLOCK(self):
            return self.getToken(SCLParser.FUNCTION_BLOCK, 0)

        def IDENT(self):
            return self.getToken(SCLParser.IDENT, 0)

        def BEGIN(self):
            return self.getToken(SCLParser.BEGIN, 0)

        def statementList(self):
            return self.getTypedRuleContext(SCLParser.StatementListContext,0)


        def END_FUNCTION_BLOCK(self):
            return self.getToken(SCLParser.END_FUNCTION_BLOCK, 0)

        def blockHeader(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SCLParser.BlockHeaderContext)
            else:
                return self.getTypedRuleContext(SCLParser.BlockHeaderContext,i)


        def varSection(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SCLParser.VarSectionContext)
            else:
                return self.getTypedRuleContext(SCLParser.VarSectionContext,i)


        def constantSection(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SCLParser.ConstantSectionContext)
            else:
                return self.getTypedRuleContext(SCLParser.ConstantSectionContext,i)


        def getRuleIndex(self):
            return SCLParser.RULE_functionBlock

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunctionBlock" ):
                return visitor.visitFunctionBlock(self)
            else:
                return visitor.visitChildren(self)




    def functionBlock(self):

        localctx = SCLParser.FunctionBlockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_functionBlock)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 64
            self.match(SCLParser.FUNCTION_BLOCK)
            self.state = 65
            self.match(SCLParser.IDENT)
            self.state = 69
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==64:
                self.state = 66
                self.blockHeader()
                self.state = 71
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 76
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 3204448256) != 0):
                self.state = 74
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [24, 25, 26, 27, 28, 29]:
                    self.state = 72
                    self.varSection()
                    pass
                elif token in [31]:
                    self.state = 73
                    self.constantSection()
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 78
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 79
            self.match(SCLParser.BEGIN)
            self.state = 80
            self.statementList()
            self.state = 81
            self.match(SCLParser.END_FUNCTION_BLOCK)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BlockHeaderContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENT(self, i:int=None):
            if i is None:
                return self.getTokens(SCLParser.IDENT)
            else:
                return self.getToken(SCLParser.IDENT, i)

        def COLON(self):
            return self.getToken(SCLParser.COLON, 0)

        def EQ(self):
            return self.getToken(SCLParser.EQ, 0)

        def literal(self):
            return self.getTypedRuleContext(SCLParser.LiteralContext,0)


        def getRuleIndex(self):
            return SCLParser.RULE_blockHeader

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBlockHeader" ):
                return visitor.visitBlockHeader(self)
            else:
                return visitor.visitChildren(self)




    def blockHeader(self):

        localctx = SCLParser.BlockHeaderContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_blockHeader)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 83
            self.match(SCLParser.IDENT)
            self.state = 84
            _la = self._input.LA(1)
            if not(_la==1 or _la==11):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
            self.state = 87
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [63, 65, 66, 67, 68, 69]:
                self.state = 85
                self.literal()
                pass
            elif token in [64]:
                self.state = 86
                self.match(SCLParser.IDENT)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ConstantSectionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CONST(self):
            return self.getToken(SCLParser.CONST, 0)

        def END_CONST(self):
            return self.getToken(SCLParser.END_CONST, 0)

        def constDecl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SCLParser.ConstDeclContext)
            else:
                return self.getTypedRuleContext(SCLParser.ConstDeclContext,i)


        def getRuleIndex(self):
            return SCLParser.RULE_constantSection

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitConstantSection" ):
                return visitor.visitConstantSection(self)
            else:
                return visitor.visitChildren(self)




    def constantSection(self):

        localctx = SCLParser.ConstantSectionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_constantSection)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 89
            self.match(SCLParser.CONST)
            self.state = 93
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==64:
                self.state = 90
                self.constDecl()
                self.state = 95
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 96
            self.match(SCLParser.END_CONST)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ConstDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENT(self):
            return self.getToken(SCLParser.IDENT, 0)

        def ASSIGN(self):
            return self.getToken(SCLParser.ASSIGN, 0)

        def expression(self):
            return self.getTypedRuleContext(SCLParser.ExpressionContext,0)


        def SEMI(self):
            return self.getToken(SCLParser.SEMI, 0)

        def COLON(self):
            return self.getToken(SCLParser.COLON, 0)

        def typeName(self):
            return self.getTypedRuleContext(SCLParser.TypeNameContext,0)


        def getRuleIndex(self):
            return SCLParser.RULE_constDecl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitConstDecl" ):
                return visitor.visitConstDecl(self)
            else:
                return visitor.visitChildren(self)




    def constDecl(self):

        localctx = SCLParser.ConstDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_constDecl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 98
            self.match(SCLParser.IDENT)
            self.state = 101
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==1:
                self.state = 99
                self.match(SCLParser.COLON)
                self.state = 100
                self.typeName()


            self.state = 103
            self.match(SCLParser.ASSIGN)
            self.state = 104
            self.expression(0)
            self.state = 105
            self.match(SCLParser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VarSectionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def varSectionHeader(self):
            return self.getTypedRuleContext(SCLParser.VarSectionHeaderContext,0)


        def END_VAR(self):
            return self.getToken(SCLParser.END_VAR, 0)

        def varDecl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SCLParser.VarDeclContext)
            else:
                return self.getTypedRuleContext(SCLParser.VarDeclContext,i)


        def getRuleIndex(self):
            return SCLParser.RULE_varSection

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVarSection" ):
                return visitor.visitVarSection(self)
            else:
                return visitor.visitChildren(self)




    def varSection(self):

        localctx = SCLParser.VarSectionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_varSection)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 107
            self.varSectionHeader()
            self.state = 111
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==64:
                self.state = 108
                self.varDecl()
                self.state = 113
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 114
            self.match(SCLParser.END_VAR)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VarSectionHeaderContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VAR_INPUT(self):
            return self.getToken(SCLParser.VAR_INPUT, 0)

        def VAR_OUTPUT(self):
            return self.getToken(SCLParser.VAR_OUTPUT, 0)

        def VAR_IN_OUT(self):
            return self.getToken(SCLParser.VAR_IN_OUT, 0)

        def VAR(self):
            return self.getToken(SCLParser.VAR, 0)

        def VAR_TEMP(self):
            return self.getToken(SCLParser.VAR_TEMP, 0)

        def VAR_CONSTANT(self):
            return self.getToken(SCLParser.VAR_CONSTANT, 0)

        def getRuleIndex(self):
            return SCLParser.RULE_varSectionHeader

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVarSectionHeader" ):
                return visitor.visitVarSectionHeader(self)
            else:
                return visitor.visitChildren(self)




    def varSectionHeader(self):

        localctx = SCLParser.VarSectionHeaderContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_varSectionHeader)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 116
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 1056964608) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VarDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def identList(self):
            return self.getTypedRuleContext(SCLParser.IdentListContext,0)


        def COLON(self):
            return self.getToken(SCLParser.COLON, 0)

        def typeName(self):
            return self.getTypedRuleContext(SCLParser.TypeNameContext,0)


        def SEMI(self):
            return self.getToken(SCLParser.SEMI, 0)

        def AT(self):
            return self.getToken(SCLParser.AT, 0)

        def IDENT(self):
            return self.getToken(SCLParser.IDENT, 0)

        def ASSIGN(self):
            return self.getToken(SCLParser.ASSIGN, 0)

        def expression(self):
            return self.getTypedRuleContext(SCLParser.ExpressionContext,0)


        def getRuleIndex(self):
            return SCLParser.RULE_varDecl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVarDecl" ):
                return visitor.visitVarDecl(self)
            else:
                return visitor.visitChildren(self)




    def varDecl(self):

        localctx = SCLParser.VarDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_varDecl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 118
            self.identList()
            self.state = 121
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==59:
                self.state = 119
                self.match(SCLParser.AT)
                self.state = 120
                self.match(SCLParser.IDENT)


            self.state = 123
            self.match(SCLParser.COLON)
            self.state = 124
            self.typeName()
            self.state = 127
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==2:
                self.state = 125
                self.match(SCLParser.ASSIGN)
                self.state = 126
                self.expression(0)


            self.state = 129
            self.match(SCLParser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IdentListContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENT(self, i:int=None):
            if i is None:
                return self.getTokens(SCLParser.IDENT)
            else:
                return self.getToken(SCLParser.IDENT, i)

        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(SCLParser.COMMA)
            else:
                return self.getToken(SCLParser.COMMA, i)

        def getRuleIndex(self):
            return SCLParser.RULE_identList

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIdentList" ):
                return visitor.visitIdentList(self)
            else:
                return visitor.visitChildren(self)




    def identList(self):

        localctx = SCLParser.IdentListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_identList)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 131
            self.match(SCLParser.IDENT)
            self.state = 136
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==4:
                self.state = 132
                self.match(SCLParser.COMMA)
                self.state = 133
                self.match(SCLParser.IDENT)
                self.state = 138
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TypeNameContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENT(self):
            return self.getToken(SCLParser.IDENT, 0)

        def ARRAY(self):
            return self.getToken(SCLParser.ARRAY, 0)

        def LBRACKET(self):
            return self.getToken(SCLParser.LBRACKET, 0)

        def indexRange(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SCLParser.IndexRangeContext)
            else:
                return self.getTypedRuleContext(SCLParser.IndexRangeContext,i)


        def RBRACKET(self):
            return self.getToken(SCLParser.RBRACKET, 0)

        def OF(self):
            return self.getToken(SCLParser.OF, 0)

        def typeName(self):
            return self.getTypedRuleContext(SCLParser.TypeNameContext,0)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(SCLParser.COMMA)
            else:
                return self.getToken(SCLParser.COMMA, i)

        def STRUCT(self):
            return self.getToken(SCLParser.STRUCT, 0)

        def END_STRUCT(self):
            return self.getToken(SCLParser.END_STRUCT, 0)

        def varDecl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SCLParser.VarDeclContext)
            else:
                return self.getTypedRuleContext(SCLParser.VarDeclContext,i)


        def getRuleIndex(self):
            return SCLParser.RULE_typeName

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTypeName" ):
                return visitor.visitTypeName(self)
            else:
                return visitor.visitChildren(self)




    def typeName(self):

        localctx = SCLParser.TypeNameContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_typeName)
        self._la = 0 # Token type
        try:
            self.state = 162
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [64]:
                self.enterOuterAlt(localctx, 1)
                self.state = 139
                self.match(SCLParser.IDENT)
                pass
            elif token in [60]:
                self.enterOuterAlt(localctx, 2)
                self.state = 140
                self.match(SCLParser.ARRAY)
                self.state = 141
                self.match(SCLParser.LBRACKET)
                self.state = 142
                self.indexRange()
                self.state = 147
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==4:
                    self.state = 143
                    self.match(SCLParser.COMMA)
                    self.state = 144
                    self.indexRange()
                    self.state = 149
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 150
                self.match(SCLParser.RBRACKET)
                self.state = 151
                self.match(SCLParser.OF)
                self.state = 152
                self.typeName()
                pass
            elif token in [61]:
                self.enterOuterAlt(localctx, 3)
                self.state = 154
                self.match(SCLParser.STRUCT)
                self.state = 158
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==64:
                    self.state = 155
                    self.varDecl()
                    self.state = 160
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 161
                self.match(SCLParser.END_STRUCT)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IndexRangeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SCLParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(SCLParser.ExpressionContext,i)


        def RANGE(self):
            return self.getToken(SCLParser.RANGE, 0)

        def getRuleIndex(self):
            return SCLParser.RULE_indexRange

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIndexRange" ):
                return visitor.visitIndexRange(self)
            else:
                return visitor.visitChildren(self)




    def indexRange(self):

        localctx = SCLParser.IndexRangeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_indexRange)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 164
            self.expression(0)
            self.state = 165
            self.match(SCLParser.RANGE)
            self.state = 166
            self.expression(0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementListContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SCLParser.StatementContext)
            else:
                return self.getTypedRuleContext(SCLParser.StatementContext,i)


        def getRuleIndex(self):
            return SCLParser.RULE_statementList

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatementList" ):
                return visitor.visitStatementList(self)
            else:
                return visitor.visitChildren(self)




    def statementList(self):

        localctx = SCLParser.StatementListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_statementList)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 171
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,13,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 168
                    self.statement() 
                self.state = 173
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,13,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def assignment(self):
            return self.getTypedRuleContext(SCLParser.AssignmentContext,0)


        def SEMI(self):
            return self.getToken(SCLParser.SEMI, 0)
